--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,68 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter( inventor => (inventor.year >= 1500
+                                              && inventor.year < 1600 ));
+    console.table(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.table(fullNames);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    /*const ordered = inventors.sort( function (firstPerson, secondPerson){
+      if( firstPerson.year > secondPerson.year ) {
+        return 1 ;
+      } else {
+        return -1 ;
+      }
+    });*/
+    const ordered = inventors.sort((firstPerson, secondPerson) =>
+                              (firstPerson.year > secondPerson.year
+                                ? 1 : -1 ))  ;
+    console.table(ordered);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-
+    const inventorsAge = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    },0 );
+    console.log(inventorsAge) ;
     // 5. Sort the inventors by years lived
-
+    const yearsLived = inventors.sort( function(a,b){
+      const last = a.passed - a.year ;
+      const next = b.passed - b.year ;
+      last > next ? -1 : 1 ;
+    });
+    console.table(yearsLived) ;
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    /*
+    const category = document.querySelector('.mw-category');
+    const links = Array.from(category.querySelectorAll('a'));
+    const de = links
+                  .map( link => link.textContent)
+                  .filter(streetName => streetName.includes('de'));
+    */
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    const alpha = people.sort(function(lastOne, nextOne){
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1 ;
+    });
+    console.table(alpha);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    const transportSet = data.reduce(function(obj, item){
+      if(!obj[item]){
+        obj[item] = 0 ;
+      }
+      obj[item]++;
+      return obj;
+    },{});
+    console.table(transportSet);
   </script>
 </body>
 </html>
