--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -24,6 +24,7 @@
     .panels {
       min-height:100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -41,19 +42,41 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      flex: 1;
     }
 
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel1 { background-image:url(https://source.unsplash.com/n8HAQ26GnMc/1500x1500); }
+    .panel2 { background-image:url(https://source.unsplash.com/SshYpuf607g/1500x1500); }
+    .panel3 { background-image:url(https://source.unsplash.com/0FQneB1VjaM/1500x1500); }
+    .panel4 { background-image:url(https://source.unsplash.com/VTDm03aGzl4/1500x1500); }
+    .panel5 { background-image:url(https://source.unsplash.com/249DzAuJTqQ/1500x1500); }
 
     .panel > * {
       margin:0;
       width: 100%;
       transition:transform 0.5s;
+      /*border: 1px solid green ;*/
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    /*:root {
+      --firstChild: -100%;
+      --lastChild: 100%;
+    }*/
+    .panel > *:first-child{
+      transform: translateY(-100%);
+    }
+
+    .panel > *:last-child {
+      transform: translateY(100%);
     }
 
     .panel p {
@@ -67,7 +90,14 @@
     }
 
     .panel.open {
+      flex: 5;
       font-size:40px;
+    }
+    .panel.open > *:last-child {
+      transform: translateY(0%);
+    }
+    .panel.open > *:first-child {
+      transform: translateY(0%);
     }
 
   </style>
@@ -75,34 +105,69 @@
 
   <div class="panels">
     <div class="panel panel1">
-      <p>Hey</p>
-      <p>Let's</p>
-      <p>Dance</p>
+      <p>O</p>
+      <p>No</p>
+      <p>?</p>
     </div>
     <div class="panel panel2">
-      <p>Give</p>
-      <p>Take</p>
-      <p>Receive</p>
+      <p>No</p>
+      <p>Culpes</p>
+      <p>A la noche</p>
     </div>
     <div class="panel panel3">
-      <p>Experience</p>
-      <p>It</p>
-      <p>Today</p>
+      <p>No Culpes</p>
+      <p>A</p>
+      <p>La lluvia</p>
     </div>
     <div class="panel panel4">
-      <p>Give</p>
-      <p>All</p>
-      <p>You can</p>
+      <p>A</p>
+      <p>La</p>
+      <p>Playa</p>
     </div>
     <div class="panel panel5">
-      <p>Life</p>
-      <p>In</p>
-      <p>Motion</p>
+      <p>Noche</p>
+      <p>Noche</p>
+      <p>Noche</p>
     </div>
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
+    function toggleOpen(e){
+      this.classList.toggle('open');
+      /*
+      const bindThis = this ;
+      /*
+      panels.forEach( panel => panel.addEventListener('transitionend',
+                    function(e){
+          if(e.propertyName.includes('flex') &&
+             bindThis.classList.contains('open')){
+          console.log(e.propertyName);
+          console.log(bindThis.classList.contains('open'));
+          document.documentElement.style.setProperty('--firstChild', 0 +'%');
+          document.documentElement.style.setProperty('--lastChild', 0+'%');
+        } else {
+          console.log(e.propertyName);
+          console.log(bindThis.classList.contains('open'));
+          document.documentElement.style.setProperty('--firstChild', -100 +'%');
+          document.documentElement.style.setProperty('--lastChild', 100 +'%');
 
+        }
+      })); */
+    }
+    /*
+    function toggleChilds(e){
+      if(e.propertyName.includes('flex')){
+        document.documentElement.style.setProperty('--firstChild', 0 +'%');
+        document.documentElement.style.setProperty('--lastChild', 0+'%');
+      }
+      console.log(this.name);
+      //document.documentElement.style.setProperty(`--${this.name}`,this.value +;
+    } */
+
+    panels.forEach( panel => panel.addEventListener('click', toggleOpen));
+    //  panels.forEach( panel => panel.addEventListener('transitionend',
+    //                toggleChilds));
   </script>
 
 
