--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -15,8 +15,49 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const cities = [];
 
+  fetch(endpoint)
+        .then(blob => blob.json())
+        .then(data => cities.push(...data));
+
+  function find( word, cities){
+    return cities.filter(place => {
+      const regex = new RegExp(word, 'gi');
+      return place.city.match(regex) || place.state.match(regex);
+    });
+  }
+
+  function addCommas(num){
+    return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+  }
+  
+  function displayFound(){
+    const matchArr = find( this.value, cities );
+
+    const html = matchArr.map(place => {
+      const regex = new RegExp(this.value, 'gi');
+      const cityName = place.city.replace( regex, `<span class="hl">${this.
+        value}</span>`);
+      const stateName = place.state.replace( regex, `<span class="hl">${this.
+        value}</span>`);
+      return `
+        <li>
+          <span class="name">${cityName}, ${stateName}</span>
+          <span class="population">${addCommas(place.population)}</span>
+        </li>
+      `;
+    }).join('');
+
+    suggestions.innerHTML = html ;
+  }
+
+  const searchInput = document.querySelector('.search');
+  const suggestions = document.querySelector('.suggestions');
+
+  searchInput.addEventListener('change', displayFound );
+  searchInput.addEventListener('keyup', displayFound );
 </script>
   </body>
 </html>
