--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,6 +7,51 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+  const canvas = document.querySelector('#draw');
+  const ctx = canvas.getContext('2d');
+
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  ctx.strokeStyle = '#BADA55';
+  ctx.lineJoin = 'round';
+  ctx.lineCap = 'round';
+  ctx.lineWidth = 15 ;
+
+  let isDrawing = false;
+  let lastX = 0;
+  let lastY = 0;
+  let hue = 0;
+  let direction = true ;
+
+
+  function draw(evt){
+    if(!isDrawing) return;
+
+    ctx.strokeStyle = `hsl(${hue},100%,50%)`;
+    ctx.beginPath();
+    ctx.moveTo(lastX, lastY);
+    ctx.lineTo(evt.offsetX, evt.offsetY);
+    ctx.stroke();
+    [lastX, lastY] = [evt.offsetX, evt.offsetY];
+
+    hue >360? hue = 0 : hue++;
+
+    if( ctx.lineWidth >= 75 || ctx.lineWidth <= 5 ){
+      direction = !direction ;
+    }
+
+    direction ? ctx.lineWidth++ : ctx.lineWidth-- ;
+
+  }
+
+  canvas.addEventListener('mousemove', draw );
+  canvas.addEventListener('mousedown', (evt)=>{
+    isDrawing = true ;
+    [lastX, lastY] = [evt.offsetX, evt.offsetY];
+  });
+  canvas.addEventListener('mouseup',()=>isDrawing=false);
+  canvas.addEventListener('mouseout',()=>isDrawing=false);
 </script>
 
 <style>
