--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -13,33 +13,57 @@
 
     function makeGreen() {
       const p = document.querySelector('p');
-      p.style.color = '#BADA55';
+      p.style.color = '#55DA55';
       p.style.fontSize = '50px';
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('Holi, Como estás, %s!', 'Eduardo');
 
     // Styled
-
+    console.log('%c Lorem ipsum dolor sit amet','font-size:3em')
     // warning!
-
+    console.warn('PUCHACHE!');
     // Error :|
-
+    console.error('I DO NOT COMPUTE');
     // Info
-
+    console.info('La luna se aleja de la tierra 4cm por año.');
     // Testing
-
+    let a  ;
+    console.assert( a === true, 'something is wrong');
     // clearing
-
+    //console.clear();
     // Viewing DOM Elements
-
+    const p = document.querySelector('p');
+    console.dir(p);
     // Grouping together
-
+    dogs.forEach( dog =>{
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}.`);
+      console.log(`${dog.name} has ${dog.age} years old.`);
+      console.log(`${dog.name} has ${dog.age * 7 } dog years old.`);
+      console.groupEnd(`${dog.name}`);
+    })
     // counting
-
+    console.count('sarasa');
+    console.count('sarasa');
+    console.count('sarasa');
+    console.count('sarasa');
+    console.count('sarasa');
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/wesbos')
+          .then(data => data.json())
+          .then(data => {
+            console.timeEnd('fetching data');
+            console.log(data);
+    });
+
+    console.table(dogs);
+
 
   </script>
 </body>
