--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -56,7 +56,9 @@
    <!--
    The following is a common layout you would see in an email client.
 
-   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
+   When a user clicks a checkbox, holds Shift,
+   and then clicks another checkbox a few rows down,
+   all the checkboxes inbetween those two checkboxes should be checked.
 
   -->
   <div class="inbox">
@@ -99,6 +101,60 @@
   </div>
 
 <script>
+  const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+  let lastChecked ;
+  console.log(lastChecked);
+  function handleCheck(evt){
+    let inbetween = false ;
+    if(evt.shiftKey && this.checked){
+      checkboxes.forEach( checkbox => {
+        console.log(checkbox);
+        if( checkbox === this || checkbox === lastChecked ){
+          inbetween = !inbetween ;
+          console.log('marcando cancha');
+        }
+        // sin el typeof, si estás apretando shift en el primer click,
+        // manda fruta.
+        if(inbetween && typeof lastChecked != 'undefined') checkbox.checked = true ;
+      });
+    }
+    lastChecked = this ;
+  }
+/*
+Quise deschequear, pero no me da el tiempo T.T
+  function handleUncheck(evt){
+    let inbetween = false ;
+    if(evt.shiftKey && this.checked){
+      checkboxes.forEach( checkbox => {
+        console.log(checkbox);
+        if( checkbox === this || checkbox === lastChecked ){
+          inbetween = !inbetween ;
+          console.log('desmarcando cancha');
+        }
+        if(inbetween && typeof lastChecked != 'undefined') checkbox.checked = false ;
+      });
+    }
+    lastChecked = this ;
+  }
+*/
+
+  checkboxes.forEach( checkbox => checkbox.addEventListener(
+              'click', handleCheck ));
+  //checkboxes.forEach( checkbox => checkbox.addEventListener(
+  //            'click', handleUncheck ));
+  /*
+  Intento sin ver el video.
+
+  const items = [...document.querySelectorAll('.item')];
+
+  function holdShift(evt){
+    if( evt.which !== 16 ) return ;
+    items.forEach( item => item.addEventListener('click',
+                            ()=> ??? );
+  }
+
+  window.addEventListener('keydown', holdShift );*/
+
 </script>
 </body>
 </html>
