--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -44,20 +44,49 @@
 
   <script>
     function debounce(func, wait = 20, immediate = true) {
-      var timeout;
+      let timeout;
       return function() {
-        var context = this, args = arguments;
-        var later = function() {
+        const context = this, args = arguments;
+        const later = function() {
           timeout = null;
           if (!immediate) func.apply(context, args);
         };
-        var callNow = immediate && !timeout;
+        const callNow = immediate && !timeout;
         clearTimeout(timeout);
         timeout = setTimeout(later, wait);
         if (callNow) func.apply(context, args);
       };
     }
+  //
+  // Nouns
+  //
+  const sliderImages = document.querySelectorAll('.slide-in');
+  //
+  // Functions
+  //
+  function checkSlide(evt){
+    sliderImages.forEach( sliderImage => {
+      // half way through the image
+      const slideInAt = (window.scrollY + window.innerHeight) -
+                            sliderImage.height / 2 ;
+      // fondo de la imagen
+      const imageBottom = sliderImage.offsetTop + sliderImage.height ;
+      // conditions
+      const isHalfShown = slideInAt > sliderImage.offsetTop ;
+      const isNotScroledPast = window.scrollY < imageBottom ;
 
+      if( isHalfShown && isNotScroledPast ){
+        sliderImage.classList.add('active');
+      } else {
+        sliderImage.classList.remove('active');
+      }
+    });
+  }
+
+  //
+  // Event listeners
+  //
+  window.addEventListener('scroll', debounce(checkSlide));
   </script>
 
   <style>
