--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -8,16 +8,36 @@
 
   <script>
     // start with strings, numbers and booleans
+    let name = 'Boris' ;
+    let name2 = name ;
+    console.log({name}, {name2});
+    name = 'bori';
+    console.log({name}, {name2});
+    let age = 100 ;
+    let age2 = age ;
+    console.log({age}, {age2});
+    age = 250 ;
+    console.log({age}, {age2});
+
+    let booleans = true ;
+    let booleans2 = booleans ;
+    console.log({booleans},{booleans2});
+    booleans = false ;
+    console.log({booleans},{booleans2});
 
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players ;
+    console.log({players},{team});
+    console.warn('copia fallida!');
 
     // You might think we can just do something like this:
-
+    team.push('Eduardo');
     // however what happens when we update that array?
-
+    console.log({players},{team});
+    console.warn('copia fallida!');
     // now here is the problem!
 
     // oh no - we have edited the original array too!
@@ -27,28 +47,48 @@
     // So, how do we fix this? We take a copy instead!
 
     // one way
+    const team2 = players.slice();
+    team2.push('roberto');
+    console.log({players},{team2});
 
     // or create a new array and concat the old one in
+    const team3 = [].concat(players);
+    team3.push('rodolfo');
+    console.log({players},{team3});
 
     // or use the new ES6 Spread
+    const team4 = [...players];
+    const team5 = Array.from(players);
 
     // now when we update it, the original one isn't changed
-
+    team4[5] = 'gustav';
+    team5[5] = 'not gustav';
+    console.log({players},{team4},{team5});
     // The same thing goes for objects, let's say we have a person object
 
     // with Objects
     const person = {
-      name: 'Wes Bos',
-      age: 80
+      name: 'Boris Vigotskij',
+      age: 247
     };
 
     // and think we make a copy:
-
+    const captain = person ;
+    captain.number = 99 ;
+    console.log({person},{captain});
     // how do we take a copy instead?
+    const captain2 = Object.assign({}, person , { otherNumber: 65 });
+    console.log({person},{captain},{captain2});
 
     // We will hopefully soon see the object ...spread
+    // ya funciona :3
+    const captain3 = {...person};
+    console.log({captain3});
 
-    // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+
+
+    // Things to note - this is only 1 level deep - both for Arrays and Objects.
+    // lodash has a cloneDeep method, but you should think twice before using it.
 
   </script>
 
