--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -22,17 +22,83 @@
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
+      <input type="button" value="Reset" name="reset">
+      <input type="button" value="Check All" name="check">
+      <input type="button" value="Uncheck All" name="uncheck">
     </form>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
+  const resetBtn = document.querySelector('[name=reset]');
+  const checkBtn = document.querySelector('[name=check]');
+  const uncheckBtn = document.querySelector('[name=uncheck]');
 
+  function addItem(evt) {
+    evt.preventDefault();
+    const text = (this.querySelector('[name=item]')).value ;
+    const item = {
+      text,
+      done: false
+    };
+    items.push(item);
+    populateList(items, itemsList );
+    localStorage.setItem('items', JSON.stringify(items)) ;
+    this.reset();
+  }
+  function populateList(plates = [] , platesList ){
+    platesList.innerHTML = plates.map((plate, idx) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${idx} id="item${idx}" ${plate.done ? 'checked' : ''} >
+          <label for="item${idx}">${plate.text}</label>
+        </li>
+      `;
+    }).join('');
+  }
+  function toggleDone (evt) {
+    if(!evt.target.matches('input')) return;
+    const elem = evt.target ;
+    const index = elem.dataset.index;
+    items[index].done = !items[index].done ;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items,itemsList);
+
+  }
+  function clearAll() {
+    localStorage.clear();
+    location.reload();
+  }
+  function checkAll() {
+    items.forEach( item => item.done = true ) ;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items,itemsList);
+  }
+  function uncheckAll () {
+    items.forEach( (item) => item.done = false );
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items,itemsList);
+  }
+  //
+  //  Event Listeners
+  //
+  addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone );
+  resetBtn.addEventListener('click', clearAll );
+  checkBtn.addEventListener('click', checkAll );
+  uncheckBtn.addEventListener('click', uncheckAll );
+  /*buttons.forEach( () => addEventListener('click', (evt) => {
+    //const nameEvt = evt.target.name ;
+    //if()
+    console.log(evt.target.name);
+  }));*/
+
+
+  populateList(items, itemsList );
 </script>
 
 
 </body>
 </html>
-
