dia 16 challenge finalizado

--- a/16 - Mouse Move Shadow/index-start.html
+++ b/16 - Mouse Move Shadow/index-start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8-es_ar">
   <title>Mouse Shadow</title>
 </head>
 <body>
@@ -35,6 +35,42 @@
   </style>
 
 <script>
+//
+//  Elements
+//
+const hero = document.querySelector('.hero');
+const text = hero.querySelector('h1');
+const walk = 100 ;
+
+//
+//  Functions
+//
+function shadow(evt){
+  const width = hero.offsetWidth ;
+  const height = hero.offsetHeight ;
+  // const { offsetWidth: width, offsetHeight: height } = hero ;
+  let x = evt.offsetX ;
+  let y = evt.offsetY ;
+  // let { offsetX: x, offsetY: y} = evt ;
+  if( this !== evt.target ){
+    x = x + evt.target.offsetLeft ;
+    y = y + evt.target.offsetTop ;
+  }
+  const xWalk = Math.round(( x / width * walk ) - (walk / 2 )) ;
+  const yWalk = Math.round(( y / height * walk ) - (walk / 2 )) ;
+
+  text.style.textShadow = `
+    ${xWalk}px ${yWalk}px 0 red,
+    ${xWalk * -1}px ${yWalk}px 0 violet,
+    ${xWalk}px ${yWalk * -1}px 0 blue,
+    ${xWalk * -1}px ${yWalk * -1}px 0 green
+  `;
+}
+
+//
+//  Event Listeners
+//
+hero.addEventListener('mousemove', shadow );
 </script>
 </body>
 </html>
