--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -12,6 +12,28 @@
 <script>
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
+  const recognition = new SpeechRecognition() ;
+  recognition.interimResults = true ;
+
+  let p = document.createElement( 'p' ) ;
+  const words = document.querySelector('.words');
+  words.appendChild(p);
+
+  recognition.addEventListener('result', evt => {
+    console.log(evt.results);
+
+    const transcript = [...evt.results]
+      .map( result => result[0])
+      .map( result => result.transcript )
+      .join('');
+
+      p.textContent = transcript ;
+      if (evt.result.[0]isFinal) {
+        p = document.createElement( 'p' ) ;
+        words.appendChild(p);
+      }
+  });
+  recognition.addEventListener('end', recognition.start );
 
 </script>
 
