dia 20 challenge fixed. (error tipográfico corregido)

--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -28,7 +28,7 @@
       .join('');
 
       p.textContent = transcript ;
-      if (evt.result.[0]isFinal) {
+      if (evt.result[0].isFinal) {
         p = document.createElement( 'p' ) ;
         words.appendChild(p);
       }
