--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -29,12 +29,46 @@
     </div>
 
 <script>
-  const msg = new SpeechSynthesisUtterance();
-  let voices = [];
-  const voicesDropdown = document.querySelector('[name="voice"]');
-  const options = document.querySelectorAll('[type="range"], [name="text"]');
-  const speakButton = document.querySelector('#speak');
-  const stopButton = document.querySelector('#stop');
+//
+//  Nouns
+//
+const msg = new SpeechSynthesisUtterance();
+let voices = [];
+const voicesDropdown = document.querySelector('[name="voice"]');
+const options = document.querySelectorAll('[type="range"], [name="text"]');
+const speakButton = document.querySelector('#speak');
+const stopButton = document.querySelector('#stop');
+
+msg.text = document.querySelector('[name=text]').value ;
+//
+//  Functions
+//
+function populateVoices() {
+  voices = this.getVoices() ;
+  voicesDropdown.innerHTML = voices
+    .map( voice => ` <option value="${voice.name}">${voice.name} (${voice.lang}) </option>`)
+    .join('');
+}
+function setVoice(){
+  msg.voice = voices.find( voice => voice.name === this.value );
+  toggle();
+}
+function toggle() {
+  speechSynthesis.cancel();
+  speechSynthesis.speak(msg);
+}
+function setOption() {
+  msg[this.name] = this.value ;
+  toggle() ;
+}
+//
+//  Event Listeners
+//
+speechSynthesis.addEventListener( 'voiceschanged', populateVoices );
+voicesDropdown.addEventListener('change', setVoice );
+options.forEach( option => option.addEventListener( 'change', setOption ));
+speakButton.addEventListener('click', toggle);
+stopButton.addEventListener('click', toggle.bind(null, false));
 </script>
 
 </body>
