--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -77,7 +77,7 @@
 <style>
   html {
     box-sizing: border-box;
-    font-family: "Arial Rounded MT Bold","Helvetica Rounded",Arial,sans-serif
+    font-family: Cantarell, "Arial Rounded MT Bold","Helvetica Rounded",Arial,sans-serif
   }
   *, *:before, *:after {
     box-sizing: inherit;
@@ -221,6 +221,51 @@
 </style>
 
 <script>
+//
+//  Nouns
+//
+const triggers = document.querySelectorAll('.cool > li');
+const background = document.querySelector('.dropdownBackground');
+const nav = document.querySelector('.top')
+
+//
+//  Functions
+//
+function handleEnter() {
+  this.classList.add('trigger-enter');
+  setTimeout( () => {
+    if (this.classList.contains('trigger-enter')) {
+      this.classList.add('trigger-enter-active');
+    }
+  }, 150 );
+  background.classList.add('open');
+
+  const dropdown = this.querySelector('.dropdown');
+  const dropdownCoords = dropdown.getBoundingClientRect();
+  const navCoords = nav.getBoundingClientRect();
+  const coords = {
+    height: dropdownCoords.height,
+    width: dropdownCoords.width,
+    top: dropdownCoords.top - navCoords.top,
+    left: dropdownCoords.left - navCoords.left
+
+  }
+  background.style.setProperty(`width`, `${coords.width}px`);
+  background.style.setProperty(`height`, `${coords.height}px`);
+  background.style.setProperty(`transform`, `translate(${coords.left}px,${coords.top}px)`);
+}
+function handleLeave() {
+  this.classList.remove('trigger-enter');
+  setTimeout( () => this.classList.remove('trigger-enter-active') );
+  background.classList.remove('open');
+}
+
+//
+//  Event Listeners
+//
+triggers.forEach( trigger => trigger.addEventListener('mouseenter', handleEnter));
+triggers.forEach( trigger => trigger.addEventListener('mouseleave', handleLeave));
+
 </script>
 
 </body>
