dia 27 challenge finalizado! Ya casigit status e.e

--- a/27 - Click and Drag/index-START.html
+++ b/27 - Click and Drag/index-START.html
@@ -35,6 +35,47 @@
   </div>
 
 <script>
+//
+//  Nouns
+//
+const slider = document.querySelector('.items');
+let isDown = false ;
+let startX ;
+let scrollLeft ;
+
+
+//
+//  Functions
+//
+
+
+//
+//  Event Listeners
+//
+slider.addEventListener('mousedown', (evt) => {
+  isDown = true ;
+  slider.classList.add('active');
+  startX = evt.pageX - slider.offsetLeft ;
+  scrollLeft = slider.scrollLeft ;
+});
+slider.addEventListener('mouseleave', () => {
+  isDown = false ;
+  slider.classList.remove('active');
+});
+slider.addEventListener('mouseup', () => {
+  isDown = false ;
+  slider.classList.remove('active');
+});
+slider.addEventListener('mousemove', (evt) => {
+  if(!isDown) return ;
+  evt.preventDefault();
+
+  const x = evt.pageX - slider.offsetLeft ;
+  const walk = (x - startX)*5 ;
+
+  slider.scrollLeft = scrollLeft - walk ;
+} );
+
 </script>
 
   </body>
