--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -33,9 +33,57 @@
   </div>
 
 <script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+//
+//  Nouns
+//
+const holes = document.querySelectorAll('.hole');
+const scoreBoard = document.querySelector('.score');
+const moles = document.querySelectorAll('.mole');
+let lastHole;
+let timeUp = false;
+let score = 0 ;
+//
+//  Functions
+//
+function randomTime ( min, max ) {
+  return Math.round((Math.random() * ( max - min ) + min ));
+}
+function randomHole(holes) {
+  const idx = Math.floor(Math.random() * holes.length );
+  const hole = holes[idx] ;
+  if( hole === lastHole ){
+    return randomHole(holes)
+  }
+  lastHole = hole ;
+  return hole ;
+}
+function popMole() {
+  const time = randomTime( 300, 1000) ;
+  const hole = randomHole(holes) ;
+  hole.classList.add('up');
+
+  setTimeout( () =>{
+    hole.classList.remove('up');
+    if(!timeUp) popMole();
+}, time );
+}
+function startGame() {
+  scoreBoard.textContent = 0 ;
+  timeUp = false ;
+  score = 0 ;
+  popMole();
+  setTimeout(()=>timeUp = true, 10000);
+}
+function hammer(evt) {
+  if(!evt.isTrusted) return ;
+  score++ ;
+  this.classList.remove('up');
+  scoreBoard.textContent = score ;
+}
+//
+// Event Listeners
+//
+moles.forEach( mole => mole.addEventListener('click', hammer));
 
 </script>
 </body>
